fix(example): wrong import

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
     <button>Send message to Rust</button>
     <div id="response"></div>
 
-    <script src="simple.ts"></script>
+    <script src="simple.js"></script>
 
     <style>
       #response {
